--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxt/image": "^0.4.14"
+  }
 }
